--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -32,8 +32,9 @@ jobs:
       - uses: actions/checkout@v4
       # Add any build steps here. For example:
       # - run: npm ci && npm run build
+      
       - name: mv
-      - run: mv ./dist ./public
+        run: mv ./dist ./public
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
